--- a/UI/MainWindow.ui
+++ b/UI/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>836</width>
-    <height>767</height>
+    <width>873</width>
+    <height>801</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
        </layout>
       </item>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayout_5">
+       <layout class="QVBoxLayout" name="btnLayout">
         <item>
          <widget class="QWidget" name="empty_2" native="true"/>
         </item>
@@ -58,6 +58,79 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QTreeWidget" name="objPropertyTree">
+        <property name="autoExpandDelay">
+         <number>0</number>
+        </property>
+        <column>
+         <property name="text">
+          <string>Property</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>Value</string>
+         </property>
+        </column>
+        <item>
+         <property name="text">
+          <string>Pos</string>
+         </property>
+         <property name="text">
+          <string>0, 0, 0</string>
+         </property>
+         <item>
+          <property name="text">
+           <string>X</string>
+          </property>
+          <property name="text">
+           <string>0</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Y</string>
+          </property>
+          <property name="text">
+           <string>0</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Z</string>
+          </property>
+          <property name="text">
+           <string>0</string>
+          </property>
+         </item>
+        </item>
+        <item>
+         <property name="text">
+          <string>Rotation</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <item>
+          <property name="text">
+           <string>Pitch</string>
+          </property>
+         </item>
+        </item>
+        <item>
+         <property name="text">
+          <string>New Item</string>
+         </property>
+         <property name="checkState">
+          <enum>Checked</enum>
+         </property>
+         <property name="flags">
+          <set>ItemIsSelectable|ItemIsEditable|ItemIsDragEnabled|ItemIsUserCheckable|ItemIsEnabled|ItemIsTristate</set>
+         </property>
+        </item>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -67,13 +140,30 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>836</width>
+     <width>873</width>
      <height>25</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
  </widget>
+ <tabstops>
+  <tabstop>addTriangle</tabstop>
+  <tabstop>objectList</tabstop>
+  <tabstop>addQuad</tabstop>
+  <tabstop>objPropertyTree</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
