--- a/UI/MainWindow.ui
+++ b/UI/MainWindow.ui
@@ -71,6 +71,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QPushButton" name="add_Obj">
+          <property name="text">
+           <string>Obj</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
