--- a/UI/MainWindow.ui
+++ b/UI/MainWindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="1">
      <layout class="QHBoxLayout" name="layoutProperty">
       <item>
-       <widget class="QTreeWidget" name="objPropertyTree">
+       <widget class="QTreeWidget" name="attributeTree">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -39,7 +39,7 @@
         </property>
         <column>
          <property name="text">
-          <string>Property</string>
+          <string>Attribute</string>
          </property>
         </column>
         <column>
