--- a/UI/QT/MainWindow.ui
+++ b/UI/QT/MainWindow.ui
@@ -16,6 +16,25 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="1">
+     <widget class="QListWidget" name="objectList">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::DefaultContextMenu</enum>
+      </property>
+      <property name="midLineWidth">
+       <number>0</number>
+      </property>
+      <property name="batchSize">
+       <number>100</number>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
      <layout class="QHBoxLayout" name="layoutProperty">
       <item>
        <widget class="QTreeWidget" name="attributeTree">
@@ -52,100 +71,34 @@
      </layout>
     </item>
     <item row="0" column="0">
-     <widget class="QTabWidget" name="tabWidget">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>1</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <widget class="QTreeWidget" name="resourceListWidget">
+      <property name="columnCount">
+       <number>2</number>
       </property>
-      <property name="currentIndex">
-       <number>0</number>
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Type</string>
+       </property>
+      </column>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="btnAddResource">
+      <property name="text">
+       <string>Add Resource</string>
       </property>
-      <widget class="QWidget" name="tabResources">
-       <attribute name="title">
-        <string>Resources</string>
-       </attribute>
-       <widget class="QTreeWidget" name="resourceListWidget">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>601</width>
-          <height>621</height>
-         </rect>
-        </property>
-        <property name="columnCount">
-         <number>2</number>
-        </property>
-        <column>
-         <property name="text">
-          <string>Name</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Type</string>
-         </property>
-        </column>
-       </widget>
-       <widget class="QPushButton" name="btnAddResource">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>650</y>
-          <width>111</width>
-          <height>27</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Add Resource</string>
-        </property>
-       </widget>
-      </widget>
-      <widget class="QWidget" name="tabObjects">
-       <attribute name="title">
-        <string>Objects</string>
-       </attribute>
-       <widget class="QListWidget" name="objectList">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>571</width>
-          <height>631</height>
-         </rect>
-        </property>
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="contextMenuPolicy">
-         <enum>Qt::DefaultContextMenu</enum>
-        </property>
-        <property name="midLineWidth">
-         <number>0</number>
-        </property>
-        <property name="batchSize">
-         <number>100</number>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="btnRemoveObject">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>650</y>
-          <width>89</width>
-          <height>27</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Remove</string>
-        </property>
-       </widget>
-      </widget>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QPushButton" name="btnRemoveObject">
+      <property name="text">
+       <string>Remove</string>
+      </property>
      </widget>
     </item>
    </layout>
@@ -156,7 +109,7 @@
      <x>0</x>
      <y>0</y>
      <width>912</width>
-     <height>25</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuMainMenu">
