--- a/UI/QT/MainWindow.ui
+++ b/UI/QT/MainWindow.ui
@@ -117,6 +117,9 @@
      <string>Menu</string>
     </property>
     <addaction name="separator"/>
+    <addaction name="actionOpenProject"/>
+    <addaction name="actionSaveProject"/>
+    <addaction name="actionSaveAsProject"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuViewmode">
@@ -154,6 +157,21 @@
   <action name="actionShading">
    <property name="text">
     <string>Shading</string>
+   </property>
+  </action>
+  <action name="actionOpenProject">
+   <property name="text">
+    <string>Open Project</string>
+   </property>
+  </action>
+  <action name="actionSaveProject">
+   <property name="text">
+    <string>Save Project</string>
+   </property>
+  </action>
+  <action name="actionSaveAsProject">
+   <property name="text">
+    <string>Save As Project</string>
    </property>
   </action>
  </widget>
