--- a/UI/QT/MainWindow.ui
+++ b/UI/QT/MainWindow.ui
@@ -117,6 +117,7 @@
      <string>Menu</string>
     </property>
     <addaction name="separator"/>
+    <addaction name="actionNewProject"/>
     <addaction name="actionOpenProject"/>
     <addaction name="actionSaveProject"/>
     <addaction name="actionSaveAsProject"/>
@@ -172,6 +173,11 @@
   <action name="actionSaveAsProject">
    <property name="text">
     <string>Save As Project</string>
+   </property>
+  </action>
+  <action name="actionNewProject">
+   <property name="text">
+    <string>New Project</string>
    </property>
   </action>
  </widget>
