--- a/UI/QT/MainWindow.ui
+++ b/UI/QT/MainWindow.ui
@@ -120,6 +120,10 @@
     <addaction name="actionNewProject"/>
     <addaction name="actionOpenProject"/>
     <addaction name="actionSaveProject"/>
+    <addaction name="separator"/>
+    <addaction name="actionNewScene"/>
+    <addaction name="actionSaveScene"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuViewmode">
@@ -177,6 +181,21 @@
   <action name="actionNewProject">
    <property name="text">
     <string>New Project</string>
+   </property>
+  </action>
+  <action name="actionNewScene">
+   <property name="text">
+    <string>New Scene</string>
+   </property>
+  </action>
+  <action name="actionSaveScene">
+   <property name="text">
+    <string>Save Scene</string>
+   </property>
+  </action>
+  <action name="actionSaveAsScene">
+   <property name="text">
+    <string>Save As Scene</string>
    </property>
   </action>
  </widget>
